--- a/addons/csi-azurefile/ccm-azurefile.yaml
+++ b/addons/csi-azurefile/ccm-azurefile.yaml
@@ -11,8 +11,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 ---
 # Source: azurefile-csi-driver/templates/serviceaccount-csi-azurefile-node.yaml
 apiVersion: v1
@@ -26,8 +26,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 ---
 # Source: azurefile-csi-driver/templates/rbac-csi-azurefile-controller.yaml
 kind: ClusterRole
@@ -40,8 +40,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumes"]
@@ -82,8 +82,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumes"]
@@ -115,8 +115,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["events"]
@@ -148,8 +148,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["persistentvolumes"]
@@ -178,8 +178,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -196,8 +196,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -214,8 +214,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-controller-sa
@@ -236,8 +236,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-controller-sa
@@ -258,8 +258,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-controller-sa
@@ -280,8 +280,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-controller-sa
@@ -302,8 +302,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-controller-sa
@@ -324,8 +324,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 subjects:
   - kind: ServiceAccount
     name: csi-azurefile-node-sa
@@ -348,12 +348,12 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 spec:
   updateStrategy:
     rollingUpdate:
-      maxUnavailable:
+      maxUnavailable: 1
     type: RollingUpdate
   selector:
     matchLabels:
@@ -369,8 +369,8 @@ spec:
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/part-of: azurefile-csi-driver
         app.kubernetes.io/managed-by: Helm
-        app.kubernetes.io/version: "v1.29.2"
-        helm.sh/chart: azurefile-csi-driver-v1.29.2
+        app.kubernetes.io/version: "v1.30.2"
+        helm.sh/chart: azurefile-csi-driver-v1.30.2
     spec:
       hostNetwork: true
       dnsPolicy: Default
@@ -401,7 +401,7 @@ spec:
           args:
             - --csi-address=/csi/csi.sock
             - --probe-timeout=3s
-            - --health-port=29613
+            - --http-endpoint=localhost:29613
             - --v=2
           imagePullPolicy: IfNotPresent
           resources:
@@ -459,15 +459,12 @@ spec:
             - "--mount-permissions=511"
             - "--allow-inline-volume-key-access-with-identity=false"
             - "--metrics-address=0.0.0.0:29615"
-          ports:
-            - containerPort: 29613
-              name: healthz
-              protocol: TCP
           livenessProbe:
             failureThreshold: 5
             httpGet:
+              host: localhost
               path: /healthz
-              port: healthz
+              port: 29613
             initialDelaySeconds: 30
             timeoutSeconds: 10
             periodSeconds: 30
@@ -486,7 +483,7 @@ spec:
                   apiVersion: v1
                   fieldPath: spec.nodeName
             - name: AZURE_GO_SDK_LOG_LEVEL
-              value:
+              value: 
           imagePullPolicy: IfNotPresent
           securityContext:
             privileged: true
@@ -541,8 +538,8 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
 spec:
   replicas: 2
   selector:
@@ -550,6 +547,8 @@ spec:
       app.kubernetes.io/name: azurefile-csi-driver
       app.kubernetes.io/instance: azurefile-csi-driver
       app: csi-azurefile-controllermanager
+  strategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
@@ -558,8 +557,8 @@ spec:
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/part-of: azurefile-csi-driver
         app.kubernetes.io/managed-by: Helm
-        app.kubernetes.io/version: "v1.29.2"
-        helm.sh/chart: azurefile-csi-driver-v1.29.2
+        app.kubernetes.io/version: "v1.30.2"
+        helm.sh/chart: azurefile-csi-driver-v1.30.2
         app: csi-azurefile-controllermanager
     spec:
       hostNetwork: true
@@ -598,30 +597,6 @@ spec:
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
-          resources:
-            limits:
-              cpu: 1
-              memory: 500Mi
-            requests:
-              cpu: 10m
-              memory: 20Mi
-        - name: csi-attacher
-          image: "{{ .InternalImages.Get "AzureFileCSIAttacher" }}"
-          args:
-            - "-v=2"
-            - "-csi-address=$(ADDRESS)"
-            - "-timeout=120s"
-            - "-leader-election"
-            - "--leader-election-namespace=kube-system"
-            - "--kube-api-qps=50"
-            - "--kube-api-burst=100"
-          env:
-            - name: ADDRESS
-              value: /csi/csi.sock
-          imagePullPolicy: IfNotPresent
-          volumeMounts:
-          - mountPath: /csi
-            name: socket-dir
           resources:
             limits:
               cpu: 1
@@ -678,7 +653,7 @@ spec:
           args:
             - --csi-address=/csi/csi.sock
             - --probe-timeout=3s
-            - --health-port=29612
+            - --http-endpoint=localhost:29612
             - --v=2
           imagePullPolicy: IfNotPresent
           volumeMounts:
@@ -705,9 +680,6 @@ spec:
             - "--user-agent-suffix=OSS-helm"
             - "--allow-empty-cloud-config=true"
           ports:
-            - containerPort: 29612
-              name: healthz
-              protocol: TCP
             - containerPort: 29614
               name: metrics
               protocol: TCP
@@ -715,7 +687,8 @@ spec:
             failureThreshold: 5
             httpGet:
               path: /healthz
-              port: healthz
+              host: localhost
+              port: 29612
             initialDelaySeconds: 30
             timeoutSeconds: 10
             periodSeconds: 30
@@ -729,11 +702,13 @@ spec:
             - name: CSI_ENDPOINT
               value: unix:///csi/csi.sock
             - name: AZURE_GO_SDK_LOG_LEVEL
-              value:
+              value: 
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - mountPath: /csi
               name: socket-dir
+            - mountPath: /root/.azcopy
+              name: azcopy-dir
             - mountPath: /etc/kubernetes/
               name: azure-cred
           resources:
@@ -745,6 +720,8 @@ spec:
               memory: 20Mi
       volumes:
         - name: socket-dir
+          emptyDir: {}
+        - name: azcopy-dir
           emptyDir: {}
         - name: azure-cred
           hostPath:
@@ -762,11 +739,11 @@ metadata:
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/part-of: azurefile-csi-driver
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/version: "v1.29.2"
-    helm.sh/chart: azurefile-csi-driver-v1.29.2
+    app.kubernetes.io/version: "v1.30.2"
+    helm.sh/chart: azurefile-csi-driver-v1.30.2
   annotations:
-    csiDriver: "v1.29.2"
-    snapshot: "v6.3.1"
+    csiDriver: "v1.30.2"
+    snapshot: "v7.0.2"
 spec:
   attachRequired: false
   podInfoOnMount: true
@@ -774,3 +751,5 @@ spec:
     - Persistent
     - Ephemeral
   fsGroupPolicy: ReadWriteOnceWithFSType
+  tokenRequests:
+    - audience: api://AzureADTokenExchange
