--- a/addons/ccm-openstack/ccm-openstack.yaml
+++ b/addons/ccm-openstack/ccm-openstack.yaml
@@ -1,18 +1,25 @@
----
-# Source: openstack-cloud-controller-manager/templates/serviceaccount.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: openstack-cloud-controller-manager
+  labels:
+    app.kubernetes.io/instance: openstack-ccm
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: openstack-cloud-controller-manager
+    app.kubernetes.io/version: v1.30.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.30.1
+  name: cloud-controller-manager
   namespace: kube-system
-  annotations:
 ---
-# Source: openstack-cloud-controller-manager/templates/clusterrole.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: system:openstack-cloud-controller-manager
-  annotations:
+  labels:
+    app.kubernetes.io/instance: openstack-ccm
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: openstack-cloud-controller-manager
+    app.kubernetes.io/version: v1.30.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.30.1
+  name: system:cloud-controller-manager
 rules:
 - apiGroups:
   - coordination.k8s.io
@@ -103,115 +110,113 @@ rules:
   - get
   - watch
 ---
-# Source: openstack-cloud-controller-manager/templates/clusterrolebinding.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: system:openstack-cloud-controller-manager
-  annotations:
+  labels:
+    app.kubernetes.io/instance: openstack-ccm
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: openstack-cloud-controller-manager
+    app.kubernetes.io/version: v1.30.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.30.1
+  name: system:cloud-controller-manager
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: system:openstack-cloud-controller-manager
+  name: system:cloud-controller-manager
 subjects:
 - kind: ServiceAccount
-  name: openstack-cloud-controller-manager
-  namespace: "kube-system"
+  name: cloud-controller-manager
+  namespace: kube-system
 ---
-# Source: openstack-cloud-controller-manager/templates/daemonset.yaml
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
+  labels:
+    app.kubernetes.io/instance: openstack-ccm
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: openstack-cloud-controller-manager
+    app.kubernetes.io/version: v1.30.0
+    helm.sh/chart: openstack-cloud-controller-manager-2.30.1
   name: openstack-cloud-controller-manager
   namespace: kube-system
-  labels:
-    app.kubernetes.io/name: openstack-cloud-controller-manager
-    helm.sh/chart: openstack-cloud-controller-manager-2.27.1
-    app.kubernetes.io/instance: openstack-ccm
-    app.kubernetes.io/version: "v1.27.1"
-    app.kubernetes.io/managed-by: Helm
-  annotations:
 spec:
   selector:
     matchLabels:
-      component: controllermanager
       app: openstack-cloud-controller-manager
+      component: controllermanager
       release: openstack-ccm
-  updateStrategy:
-    type: RollingUpdate
   template:
     metadata:
       annotations:
         "kubeone.k8c.io/cabundle-hash": "{{ .Config.CABundle | sha256sum }}"
         "kubeone.k8c.io/cloudconfig-hash": "{{ .Config.CloudProvider.CloudConfig | sha256sum }}"
       labels:
-        component: controllermanager
         app: openstack-cloud-controller-manager
-        k8s-app: openstack-cloud-controller-manager
-        release: openstack-ccm
-        chart: openstack-cloud-controller-manager-2.27.1
+        chart: openstack-cloud-controller-manager-2.30.1
+        component: controllermanager
         heritage: Helm
-      annotations:
+        release: openstack-ccm
     spec:
+      containers:
+      - args:
+        - /bin/openstack-cloud-controller-manager
+        - --v=1
+        - --cloud-config=$(CLOUD_CONFIG)
+        - --cluster-name=$(CLUSTER_NAME)
+        - --cloud-provider=openstack
+        - --use-service-account-credentials=false
+        - --controllers=cloud-node,cloud-node-lifecycle,route,service
+        - --bind-address=127.0.0.1
+        {{- with .Params.CCM_CONCURRENT_SERVICE_SYNCS }}
+        - --concurrent-service-syncs={{ . }}
+        {{- end }}
+        env:
+        - name: CLOUD_CONFIG
+          value: /etc/config/cloud-config
+        - name: CLUSTER_NAME
+          value: {{ default "kubernetes" .CCMClusterName }}
+        image: {{ .InternalImages.Get "OpenstackCCM" }}
+        name: openstack-cloud-controller-manager
+        volumeMounts:
+        - mountPath: /etc/config
+          name: cloud-config-volume
+          readOnly: true
+        - mountPath: /etc/kubernetes/pki
+          name: k8s-certs
+          readOnly: true
+        - mountPath: /etc/ssl/certs
+          name: ca-certs
+          readOnly: true
+        - mountPath: /etc/pki
+          name: pki-certs
+          readOnly: true
+        - mountPath: /usr/share/ca-certificates
+          name: usr-ca-certs
+          readOnly: true
+{{ if .Config.CABundle }}
+{{ caBundleVolumeMount | indent 8 }}
+{{ end }}
+      dnsPolicy: ClusterFirstWithHostNet
+      hostNetwork: true
+      nodeSelector:
+        node-role.kubernetes.io/control-plane: ""
+      priorityClassName: system-cluster-critical
       securityContext:
         runAsUser: 1001
+      serviceAccountName: cloud-controller-manager
       tolerations:
-        - effect: NoSchedule
-          key: node.cloudprovider.kubernetes.io/uninitialized
-          value: "true"
-        - effect: NoSchedule
-          key: node-role.kubernetes.io/control-plane
-        - effect: NoSchedule
-          key: node-role.kubernetes.io/master
-      serviceAccountName: openstack-cloud-controller-manager
-      containers:
-        - name: openstack-cloud-controller-manager
-          image: {{ .InternalImages.Get "OpenstackCCM" }}
-          args:
-            - /bin/openstack-cloud-controller-manager
-            - --v=1
-            - --cloud-config=$(CLOUD_CONFIG)
-            - --cluster-name=$(CLUSTER_NAME)
-            - --cloud-provider=openstack
-            - --controllers=cloud-node,cloud-node-lifecycle,route,service
-            - --bind-address=127.0.0.1
-            {{- with .Params.CCM_CONCURRENT_SERVICE_SYNCS }}
-            - --concurrent-service-syncs={{ . }}
-            {{- end }}
-          volumeMounts:
-            - mountPath: /etc/config
-              name: cloud-config-volume
-              readOnly: true
-            - mountPath: /etc/kubernetes/pki
-              name: k8s-certs
-              readOnly: true
-            - mountPath: /etc/ssl/certs
-              name: ca-certs
-              readOnly: true
-            - mountPath: /etc/pki
-              name: pki-certs
-              readOnly: true
-            - mountPath: /usr/share/ca-certificates
-              name: usr-ca-certs
-              readOnly: true
-{{ if .Config.CABundle }}
-{{ caBundleVolumeMount | indent 12 }}
-{{ end }}
-          env:
-            - name: CLOUD_CONFIG
-              value: /etc/config/cloud-config
-            - name: CLUSTER_NAME
-              value: {{ default "kubernetes" .CCMClusterName }}
-{{ if .Config.CABundle }}
-{{ caBundleEnvVar | indent 12 }}
-{{ end }}
-      hostNetwork: true
-      priorityClassName: "system-cluster-critical"
+      - effect: NoSchedule
+        key: node.cloudprovider.kubernetes.io/uninitialized
+        value: "true"
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/master
       volumes:
       - name: cloud-config-volume
         secret:
           secretName: cloud-config
-
       - hostPath:
           path: /etc/kubernetes/pki
           type: DirectoryOrCreate
@@ -231,3 +236,5 @@ spec:
 {{ if .Config.CABundle }}
 {{ caBundleVolume | indent 6 }}
 {{ end }}
+  updateStrategy:
+    type: RollingUpdate
