--- a/addons/csi-external-snapshotter/controller.yaml
+++ b/addons/csi-external-snapshotter/controller.yaml
@@ -1,10 +1,11 @@
+# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v8.0.1/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
+
 # This YAML file shows how to deploy the snapshot controller
 
 # The snapshot controller implements the control loop for CSI snapshot functionality.
 # It should be installed as part of the base Kubernetes distribution in an appropriate
 # namespace for components implementing base system functionality. For installing with
 # Vanilla Kubernetes, kube-system makes sense for the namespace.
-# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v6.1.0/deploy/kubernetes/snapshot-controller/setup-snapshot-controller.yaml
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -16,10 +17,11 @@ spec:
   selector:
     matchLabels:
       app: snapshot-controller
-  # the snapshot controller won't be marked as ready if the v1 CRDs are unavailable
-  # in #504 the snapshot-controller will exit after around 7.5 seconds if it
-  # can't find the v1 CRDs so this value should be greater than that
-  minReadySeconds: 15
+  # The snapshot controller won't be marked as ready if the v1 CRDs are unavailable.
+  # The flag --retry-crd-interval-max is used to determine how long the controller
+  # will wait for the CRDs to become available before exiting. The default is 30 seconds
+  # so minReadySeconds should be set slightly higher than the flag value.
+  minReadySeconds: 35
   strategy:
     rollingUpdate:
       maxSurge: 0
@@ -46,4 +48,7 @@ spec:
           args:
             - "--v=5"
             - "--leader-election=true"
+            # Add a marker to the snapshot-controller manifests. This is needed to enable feature gates in CSI prow jobs.
+            # For example, in https://github.com/kubernetes-csi/csi-release-tools/pull/209, the snapshot-controller YAML is updated to add --prevent-volume-mode-conversion=true so that the feature can be enabled for certain e2e tests.
+            # end snapshot controller args
           imagePullPolicy: IfNotPresent
