--- a/addons/csi-external-snapshotter/webhook-rbac.yaml
+++ b/addons/csi-external-snapshotter/webhook-rbac.yaml
@@ -1,10 +1,12 @@
+# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v8.0.1/deploy/kubernetes/webhook-example/rbac-snapshot-webhook.yaml
+
 # RBAC file for the snapshot webhook.
 #
 # The snapshot webhook implements the validation and admission for CSI snapshot functionality.
 # It should be installed as part of the base Kubernetes distribution in an appropriate
 # namespace for components implementing base system functionality. For installing with
 # Vanilla Kubernetes, kube-system makes sense for the namespace.
-# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v6.1.0/deploy/kubernetes/webhook-example/rbac-snapshot-webhook.yaml
+
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -19,6 +21,9 @@ metadata:
 rules:
   - apiGroups: ["snapshot.storage.k8s.io"]
     resources: ["volumesnapshotclasses"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["groupsnapshot.storage.k8s.io"]
+    resources: ["volumegroupsnapshotclasses"]
     verbs: ["get", "list", "watch"]
 ---
 kind: ClusterRoleBinding
