--- a/addons/csi-external-snapshotter/webhook.yaml
+++ b/addons/csi-external-snapshotter/webhook.yaml
@@ -1,4 +1,4 @@
-# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v6.0.1/deploy/kubernetes/webhook-example/webhook.yaml
+# Source: https://github.com/kubernetes-csi/external-snapshotter/blob/v8.0.1/deploy/kubernetes/webhook-example/webhook.yaml
 ---
 apiVersion: v1
 kind: Secret
@@ -70,8 +70,10 @@ spec:
         image: {{ .InternalImages.Get "CSISnapshotWebhook" }}
         imagePullPolicy: IfNotPresent
         args:
-          - --tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem
-          - --tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem
+        - --tls-cert-file=/etc/snapshot-validation-webhook/certs/cert.pem
+        - --tls-private-key-file=/etc/snapshot-validation-webhook/certs/key.pem
+        # uncomment the following line to enable webhook for VolumeGroupSnapshot, VolumeGroupSnapshotContent and VolumeGroupSnapshotClass.
+        # - '--enable-volume-group-snapshot-webhook'
         ports:
         - containerPort: 443 # change the port as needed
         volumeMounts:
