Migrate e2e test manifests to v1beta3
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/test/e2e/testdata/containerd_calico_external.yaml
+++ b/test/e2e/testdata/containerd_calico_external.yaml
@@ -1,11 +1,8 @@
-apiVersion: kubeone.k8c.io/v1beta2
+apiVersion: kubeone.k8c.io/v1beta3
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
-    
-containerRuntime:
-  containerd: {}
 
 clusterNetwork:
   cni:
@@ -15,7 +12,8 @@ cloudProvider:
   external: true
 
 addons:
-  enable: true
   addons:
-  - name: default-storage-class
-  - name: calico-vxlan
+    - addon:
+        name: default-storage-class
+    - addon:
+        name: calico-vxlan
