--- a/test/e2e/testdata/containerd_simple.yaml
+++ b/test/e2e/testdata/containerd_simple.yaml
@@ -1,13 +1,10 @@
-apiVersion: kubeone.k8c.io/v1beta2
+apiVersion: kubeone.k8c.io/v1beta3
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
-    
-containerRuntime:
-  containerd: {}
 
 addons:
-  enable: true
   addons:
-  - name: default-storage-class
+    - addon:
+        name: default-storage-class
