--- a/test/e2e/testdata/containerd_simple_external.yaml
+++ b/test/e2e/testdata/containerd_simple_external.yaml
@@ -1,16 +1,13 @@
-apiVersion: kubeone.k8c.io/v1beta2
+apiVersion: kubeone.k8c.io/v1beta3
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
 
-containerRuntime:
-  containerd: {}
-
-addons:
-  enable: true
-  addons:
-  - name: default-storage-class
-
 cloudProvider:
   external: true
+
+addons:
+  addons:
+    - addon:
+        name: default-storage-class
