--- a/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
+++ b/test/e2e/testdata/legacy_machine_controller_containerd_external.yaml
@@ -1,11 +1,8 @@
-apiVersion: kubeone.k8c.io/v1beta2
+apiVersion: kubeone.k8c.io/v1beta3
 kind: KubeOneCluster
 
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
-
-containerRuntime:
-  containerd: {}
 
 operatingSystemManager:
   deploy: false
@@ -14,6 +11,6 @@ cloudProvider:
   external: true
 
 addons:
-  enable: true
   addons:
-  - name: default-storage-class
+    - addon:
+        name: default-storage-class
