--- a/addons/ccm-openstack/ccm-openstack.yaml
+++ b/addons/ccm-openstack/ccm-openstack.yaml
@@ -149,13 +149,14 @@ spec:
   template:
     metadata:
       annotations:
-        "kubeone.k8c.io/cabundle-hash": "{{ .Config.CABundle | sha256sum }}"
-        "kubeone.k8c.io/cloudconfig-hash": "{{ .Config.CloudProvider.CloudConfig | sha256sum }}"
+        kubeone.k8c.io/cabundle-hash: '{{.Config.CABundle | sha256sum}}'
+        kubeone.k8c.io/cloudconfig-hash: '{{.Config.CloudProvider.CloudConfig | sha256sum}}'
       labels:
         app: openstack-cloud-controller-manager
         chart: openstack-cloud-controller-manager-2.30.1
         component: controllermanager
         heritage: Helm
+        k8s-app: openstack-cloud-controller-manager
         release: openstack-ccm
     spec:
       containers:
@@ -175,8 +176,8 @@ spec:
         - name: CLOUD_CONFIG
           value: /etc/config/cloud-config
         - name: CLUSTER_NAME
-          value: {{ default "kubernetes" .CCMClusterName }}
-        image: {{ .InternalImages.Get "OpenstackCCM" }}
+          value: '{{ default "kubernetes" .CCMClusterName }}'
+        image: '{{ .InternalImages.Get "OpenstackCCM" }}'
         name: openstack-cloud-controller-manager
         volumeMounts:
         - mountPath: /etc/config
