--- a/test/e2e/testdata/containerd_flannel_helm_external.yaml
+++ b/test/e2e/testdata/containerd_flannel_helm_external.yaml
@@ -4,10 +4,16 @@ kind: KubeOneCluster
 versions:
   kubernetes: "{{ required ".VERSION is required" .VERSION }}"
 
-cloudProvider:
-  external: true
+clusterNetwork:
+  cni:
+    external: {}
 
 addons:
   addons:
     - addon:
         name: default-storage-class
+    - helmRelease:
+        chart: flannel
+        repoURL: https://flannel-io.github.io/flannel/
+        namespace: kube-system
+        version: v0.25.4
