--- a/addons/csi-aws-ebs/aws-csi.yaml
+++ b/addons/csi-aws-ebs/aws-csi.yaml
@@ -460,7 +460,7 @@ spec:
         runAsUser: 0
       containers:
         - name: ebs-plugin
-          image: public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.34.0
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - node
@@ -508,7 +508,7 @@ spec:
               exec:
                 command: ["/bin/aws-ebs-csi-driver", "pre-stop-hook"]
         - name: node-driver-registrar
-          image: public.ecr.aws/eks-distro/kubernetes-csi/node-driver-registrar:v2.11.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -545,7 +545,7 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
         - name: liveness-probe
-          image: public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.14.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
@@ -663,7 +663,7 @@ spec:
         runAsUser: 1000
       containers:
         - name: ebs-plugin
-          image: public.ecr.aws/ebs-csi-driver/aws-ebs-csi-driver:v1.34.0
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - controller
@@ -720,7 +720,7 @@ spec:
             seccompProfile:
               type: RuntimeDefault
         - name: csi-provisioner
-          image: public.ecr.aws/eks-distro/kubernetes-csi/external-provisioner:v5.1.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --timeout=60s
@@ -752,7 +752,7 @@ spec:
             seccompProfile:
               type: RuntimeDefault
         - name: csi-attacher
-          image: public.ecr.aws/eks-distro/kubernetes-csi/external-attacher:v4.7.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --timeout=60s
@@ -781,7 +781,7 @@ spec:
             seccompProfile:
               type: RuntimeDefault
         - name: csi-snapshotter
-          image: registry.k8s.io/sig-storage/csi-snapshotter:v8.0.1
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=$(ADDRESS)
@@ -810,7 +810,7 @@ spec:
             seccompProfile:
               type: RuntimeDefault
         - name: csi-resizer
-          image: public.ecr.aws/eks-distro/kubernetes-csi/external-resizer:v1.12.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --timeout=60s
@@ -840,7 +840,7 @@ spec:
             seccompProfile:
               type: RuntimeDefault
         - name: liveness-probe
-          image: public.ecr.aws/eks-distro/kubernetes-csi/livenessprobe:v2.14.0-eks-1-31-2
+          image: {{ .InternalImages.Get "..." }}
           imagePullPolicy: IfNotPresent
           args:
             - --csi-address=/csi/csi.sock
