--- a/addons/operating-system-manager/deployment-controller.yaml
+++ b/addons/operating-system-manager/deployment-controller.yaml
@@ -56,7 +56,7 @@ spec:
             - -external-cloud-provider
             {{ end }}
             {{ if .Config.CABundle -}}
-            - -ca-bundle={{ .Resources.CABundleSSLCertFilePath }}
+            - -host-ca-bundle={{ .Resources.CABundleSSLCertFilePath }}
             {{ end -}}
             {{ if .CSIMigrationFeatureGates }}
             - -node-kubelet-feature-gates={{ .CSIMigrationFeatureGates }}
