--- a/.gimps.yaml
+++ b/.gimps.yaml
@@ -14,11 +14,11 @@
 
 # This is the configuration for https://github.com/xrstf/gimps.
 
-importOrder: [std, external, project, machine-controller, kubernetes]
+importOrder: [std, external, kubermatic, kubernetes]
 sets:
-  - name: machine-controller
+  - name: kubermatic
     patterns:
-      - 'github.com/kubermatic/machine-controller/**'
+      - 'k8c.io/**'
   - name: kubernetes
     patterns:
       - 'k8s.io/**'
